created pca model and new dataframe with the data

--- a/crypto_investments.ipynb
+++ b/crypto_investments.ipynb
@@ -2745,7 +2745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2755,27 +2755,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-341.80096268,  -51.36677548,   12.52547089],\n",
+       "       [-249.42046633,   24.11754777,  -14.23146597],\n",
+       "       [-402.61472077, -118.71073742,   24.83839662],\n",
+       "       [-406.75243715,  -79.48728629,    1.56633057],\n",
+       "       [-382.42994789, -103.43195906,   16.75307273]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use the PCA model with `fit_transform` to reduce to \n",
     "# three principal components.\n",
-    "# YOUR CODE HERE!\n",
+    "market_pca_data = pca.fit_transform(df_market_data)\n",
     "\n",
     "# View the first five rows of the DataFrame. \n",
-    "# YOUR CODE HERE!"
+    "market_pca_data[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([9.76037313e-01, 2.30282949e-02, 7.48308214e-04])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Retrieve the explained variance to determine how much information \n",
     "# can be attributed to each principal component.\n",
-    "# YOUR CODE HERE!"
+    "pca.explained_variance_ratio_"
    ]
   },
   {
@@ -2786,29 +2812,110 @@
     "\n",
     "**Question:** What is the total explained variance of the three principal components?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** The total explained variance is the sum of the three principal components which is 0.9998"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC1</th>\n",
+       "      <th>PC2</th>\n",
+       "      <th>PC3</th>\n",
+       "      <th>coinid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-341.800963</td>\n",
+       "      <td>-51.366775</td>\n",
+       "      <td>12.525471</td>\n",
+       "      <td>bitcoin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-249.420466</td>\n",
+       "      <td>24.117548</td>\n",
+       "      <td>-14.231466</td>\n",
+       "      <td>ethereum</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-402.614721</td>\n",
+       "      <td>-118.710737</td>\n",
+       "      <td>24.838397</td>\n",
+       "      <td>tether</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-406.752437</td>\n",
+       "      <td>-79.487286</td>\n",
+       "      <td>1.566331</td>\n",
+       "      <td>ripple</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-382.429948</td>\n",
+       "      <td>-103.431959</td>\n",
+       "      <td>16.753073</td>\n",
+       "      <td>bitcoin-cash</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          PC1         PC2        PC3        coinid\n",
+       "0 -341.800963  -51.366775  12.525471       bitcoin\n",
+       "1 -249.420466   24.117548 -14.231466      ethereum\n",
+       "2 -402.614721 -118.710737  24.838397        tether\n",
+       "3 -406.752437  -79.487286   1.566331        ripple\n",
+       "4 -382.429948 -103.431959  16.753073  bitcoin-cash"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a new DataFrame with the PCA data.\n",
     "# Note: The code for this step is provided for you\n",
     "\n",
     "# Creating a DataFrame with the PCA data\n",
-    "# YOUR CODE HERE!\n",
+    "df_market_pca = pd.DataFrame(market_pca_data,columns=['PC1','PC2','PC3'])\n",
     "\n",
     "# Copy the crypto names from the original data\n",
-    "# YOUR CODE HERE!\n",
+    "df_market_pca['coinid'] = df_market_data.index\n",
     "\n",
     "# Set the coinid column as index\n",
-    "# YOUR CODE HERE!\n",
+    "df_market_pcs = df_market_pca.set_index(\"coinid\")\n",
     "\n",
     "# Display sample data\n",
-    "# YOUR CODE HERE!"
+    "df_market_pca.head()"
    ]
   },
   {
